--- a/SWDApp/Resources/layout/CriterionSelect.axml
+++ b/SWDApp/Resources/layout/CriterionSelect.axml
@@ -1,34 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:text="Witaj w aplikacji "
-        android:textAppearance="?android:attr/textAppearanceLarge"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/PhoneNumberText"
-        android:text="1-xxx-xxx" />
-    <Button
-        android:text="Translate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/TranslateButton" />
-    <Button
-        android:text="Call"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/CallButton" />
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/seekBar1"
-        android:progress="3"
-        android:max="17"
-        android:backgroundTint="#00000000" />
+        android:id="@+id/linearLayout1">
+        <TextView
+            android:text="Wybór kryteriów"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/textView1" />
+        <TextView
+            android:text="Zdecyduj które kryterium jest dla ciebie ważne"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/textView2" />
+        <RadioGroup
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/criterionGroup">
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="RadioButton"
+                android:id="@+id/criterion1" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RadioButton"
+                android:id="@+id/criterionEqual" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RadioButton"
+                android:id="@+id/criterion2" />
+        </RadioGroup>
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar1"
+            android:progress="3"
+            android:max="17"
+            android:backgroundTint="#00000000" />
+    </LinearLayout>
 </LinearLayout>
