--- a/SWDApp/Resources/layout/Main.axml
+++ b/SWDApp/Resources/layout/Main.axml
@@ -2,27 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="30dp" />
     <TextView
-        android:text="Medium Text"
+        android:text="Witaj!"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:id="@+id/textView1" />
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="30dp" />
     <ImageView
         android:src="@drawable/welcomeimage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView1" />
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_marginBottom="0.0dp" />
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="40dp" />
     <TextView
-        android:text="Medium Text"
+        android:text="Aby kontynuować, kliknij..."
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2" />
+        android:layout_gravity="center" />
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="20dp" />
     <Button
-        android:text="Button"
-        android:layout_width="match_parent"
+        android:text="Dalej"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button1" />
+        android:id="@+id/mainNext"
+        android:layout_gravity="center" />
 </LinearLayout>
