criterion matrix displayed to help debugging

--- a/SWDApp/Resources/layout/CriterionSelect.axml
+++ b/SWDApp/Resources/layout/CriterionSelect.axml
@@ -69,5 +69,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/next" />
+      <TextView
+    android:text=""
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:id="@+id/textView1" />
     </LinearLayout>
 </LinearLayout>
