--- a/SWDApp/Resources/layout/CalculatedRank.axml
+++ b/SWDApp/Resources/layout/CalculatedRank.axml
@@ -9,6 +9,12 @@
       android:layout_height="wrap_content"
       android:gravity="center"
       android:id="@+id/textView1" />
+  <ImageView
+    android:src="@drawable/welcomeimage"
+    android:layout_width="wrap_content"
+    android:layout_height="200dp"
+    android:layout_marginBottom="0.0dp" 
+    android:id="@+id/bestDecision"/>
     <Button
         android:text="Button"
         android:layout_width="match_parent"
