--- a/SWDApp/Resources/layout/CalculatedRank.axml
+++ b/SWDApp/Resources/layout/CalculatedRank.axml
@@ -3,20 +3,20 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-  <TextView
-      android:text="textView1"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center"
-      android:id="@+id/textView1" />
-  <ImageView
-    android:src="@drawable/welcomeimage"
-    android:layout_width="wrap_content"
-    android:layout_height="200dp"
-    android:layout_marginBottom="0.0dp" 
-    android:id="@+id/bestDecision"/>
+    <TextView
+        android:text="textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/textView1" />
+    <ImageView
+        android:src="@drawable/welcomeimage"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_marginBottom="0.0dp"
+        android:id="@+id/bestDecision" />
     <Button
-        android:text="Button"
+        android:text="Wyjście"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button1" />
